name:                BFHS
version:             1.0.0.0
synopsis:            A simple brainfxxk interpreter written in Haskell
description:         Please see README.md
homepage:            https://github.com/problem233/BFHS#readme
license:             OtherLicense
license-file:        LICENSE
author:              Problem233
maintainer:          problem233@outlook.com
copyright:           2017 Problem233
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable BFHS-exe
  hs-source-dirs:      src
  main-is:             BFHS.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/problem233/BFHS
